# youtube_transcript_downloader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: WORKFLOW_QUICK_REFERENCE.md  copilot-instructions.md
.specify/memory/: constitution.md
specs/001-build-a-youtube/: spec.md
specs/001-transcript-downloader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-transcript-downloader/contracts/: cli-interface.md
src/yttranscript/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  formatters.py  models.py
tests/: __init__.py  test_cli.py  test_core.py  test_formatters.py  test_models.py
